GitVersion1/objects/Email_Template_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It is used to store the email template details.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Email Template Settings</label>
</CustomObject>